# aoc

./: .gitignore  Cargo.toml  rustfmt.toml
01-increase-count/: Cargo.toml
01-increase-count/src/: main.rs
02-dive/src/: main.rs
03-binary_diagnostic/src/: main.rs
11-dumbo-octopus/: Cargo.toml
12-passage-pathing/: graph.dot  graph_for_flow.dot  graph_reverse.dot
15-chitons/: Cargo.toml
17-trick-shot/: Cargo.toml
18-snailfish/: Cargo.toml  example_1.txt  example_2.txt  example_4.txt  example_6.txt  example_explode_2.txt  example_explode_5.txt
19-beacon-scanner/: Cargo.toml
2015/: Cargo.toml
2021/: Cargo.toml  LICENSE
2021/04-giant-squid/src/: main.rs
2021/05-hydrothermal-venture/src/: main.rs
2021/09-smoke-basin/src/: main.rs
2021/10-syntax-scoring/src/: main.rs
2021/11-dumbo-octopus/src/: main.rs
2021/12-passage-pathing/: Cargo.toml
2021/12-passage-pathing/src/: main.rs
2021/13-transparent-origami/: Cargo.toml
2021/14-extended-polymerization/: Cargo.toml
2021/14-extended-polymerization/src/: main.rs
2021/15-chitons/src/: main.rs
2021/16-packet-decoder/: Cargo.toml  examples.txt
2021/17-trick-shot/src/: main.rs
2021/18-snailfish/: example_3.txt  example_5.txt  example_7.txt  example_explode_1.txt  example_explode_3.txt  example_explode_4.txt
2021/18-snailfish/src/: main.rs
2021/19-beacon-scanner/src/: main.rs
2021/20-trench-map/: example_input.txt
2021/22-reactor-reboot/: Cargo.toml  example_own1.txt
2021/22-reactor-reboot/src/: main.rs
21-dirac-dice/: example.txt
22-reactor-reboot/: Cargo.toml  readme.org
(+56 files in other folders)
